# trackersync

./: .gitignore  LICENSE.txt  Makefile  README.rst  kpm_config.py.example  kpmsync.py  mendelson.diff  pyproject.toml  roundup_sync.py  setup.py
config-example/: jira_config.py  kpm_config.py  kpm_jira_config.py  kpm_ws_jira_config.py  pfiff_jira_config.py
tracker_sync/: kpmsync.py  roundup_sync.py
trackersync/: engdatv2.py  jira_sync.py  jirasync.py  kpmsync.py  kpmwssync.py  pfiffsync.py  roundup_sync.py  ssh.py  tracker_sync.py
